Fix notification service and some tests (#134)